<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_order_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:textColor="#333333"
        android:textSize="14sp"
        tools:text="下单日期" />

    <com.zmsoft.ccd.lib.widget.flextboxlayout.CustomFlexboxLayout
        android:id="@+id/layout_order_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp" />

    <RelativeLayout
        android:id="@+id/rl_select_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_start_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/module_takeout_text_filter_start_time_label"
            android:textColor="#585858"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:drawableRight="@drawable/module_takeout_ic_arrow_right"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/module_takeout_please_select_time"
            android:textColor="#585858"
            android:textSize="12sp" />

        <View
            android:id="@+id/view_time_divider"
            style="@style/Module_Takeout_Divider"
            android:layout_height="0.5dp"
            android:layout_below="@id/text_start_time_label"
            android:alpha="0.1"
            android:background="#000000" />

        <TextView
            android:id="@+id/text_end_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_time_divider"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/module_takeout_text_filter_end_time_label"
            android:textColor="#585858"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/text_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/text_end_time_label"
            android:layout_marginRight="12dp"
            android:drawableRight="@drawable/module_takeout_ic_arrow_right"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/module_takeout_please_select_time"
            android:textColor="#585858"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:id="@+id/view_divider_filters"
        style="@style/Module_Takeout_Divider"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:alpha="0.1"
        android:background="#000000" />
</LinearLayout>