<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar_normal"
                layout="@layout/layout_toobar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/rl_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_normal"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:visibility="gone">


                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    style="@style/Module_Takeout_AppTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:tabMode="fixed"
                    app:tabPaddingEnd="0dp"
                    app:tabPaddingStart="0dp" />


                <FrameLayout
                    android:id="@+id/fl_more"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:clickable="true">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="#d8d8d8" />

                    <TextView
                        android:id="@+id/text_other_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="2dp"
                        android:drawableRight="@drawable/module_takeout_ic_status_more"
                        android:gravity="center"
                        android:text="@string/module_takeout_order_status_more"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                </FrameLayout>

            </RelativeLayout>

            <com.zmsoft.ccd.lib.widget.CustomViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rl_tabs" />

        </RelativeLayout>

        <fragment
            android:id="@+id/fragment_drawer"
            class="com.zmsoft.ccd.module.takeout.order.ui.TakeoutListFilterFragment"
            android:layout_width="@dimen/module_takeout_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="end" />

    </android.support.v4.widget.DrawerLayout>


    <com.zmsoft.ccd.lib.widget.NoMoveTextView
        android:id="@+id/text_toggle_drawer"
        android:layout_width="33dp"
        android:layout_height="57dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_slide_bar"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/module_takeout_filter"
        android:textColor="#333333"
        android:textSize="10sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_delivery_batch"
        style="@style/BottomRightTextRedCircleStyle"
        android:drawableTop="@drawable/module_takeout_ic_delivery_batch"
        android:text="@string/module_takeout_delivery_batch"
        android:visibility="gone" />
</RelativeLayout>